portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping
  namespace: live
  labels:
    app.kubernetes.io/name: shopping
    app.kubernetes.io/instance: shopping
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
#    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  type: NodePort
  selector:
    app: shopping
  ports:
    - port: 80
      targetPort: 8080
